# MyCraft

./: CMakeLists.txt
assets/: asset.schema.json  assets.json  block.json  blocks.json  color.json  map.json
assets/image/: assets.json
assets/img/: map.json
assets/shader/: assets.json  basic.frag  basic.vert  chunk.frag  chunk.vert  map.json  rect.frag  rect.vert  skybox.frag  skybox.vert  solid.frag  solid.vert
assets/shaders/: map.json
assets/textures/: map.json
res/glsl/: basic.frag  basic.vert
src/: AAB.h  ArrayUtils.h  AssetManager.cpp  Camera.h  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  Color.h  Context.cpp  Context.h  DeferredTaskQueue.h  Drawable.h  Game.cpp  Game.h  GameContext.cpp  GameContext.h  IoUtils.cpp  IoUtils.h  MathUtils.h  Node.cpp  PixelFormat.h  Shader.cpp  SimpleCube.cpp  SimpleCube.h  SimpleCubeScene.h  Transform.h  TypedContainer.h  WrapAround3dArray.h  arch.h  config.h.in  main.cpp  res.cpp  res.h  resources.cpp  resources.h  types.h  utils.cpp
src/CameraControls/: CameraControls.cpp  CameraControls.h
src/Game/: Game.cpp  Game.h
src/NodeHost/: NodeHost.cpp
src/Shader/: Shader.cpp  Shader.h
src/SimpleCube/: SimpleCube.cpp  SimpleCube.h
src/asset/: Asset.cpp  Asset.h  AssetCache.cpp  AssetCache.h  AssetManager.cpp  AssetManager.h  AssetReader.h  AssetRegistry.cpp  AssetRegistry.h  Cache.h  CmrcFileReader.cpp  CmrcFileReader.h  FileReader.h  Image.cpp  Image.h  Index.h  LocalFileReader.cpp  LocalFileReader.h  Manager.cpp  Manager.h  Parser.cpp  Parser.h  Provider.h
src/block/: Block.cpp  Block.h  BlockCache.cpp  BlockCache.h  BlockRegistry.cpp  BlockRegistry.h
src/camera/: Camera.cpp  Camera.h  CameraControls.cpp  CameraControls.h  FreeCamera.cpp  FreeCamera.h
src/chunk/: ChunkBlocks.cpp  ChunkBlocks.h  ChunkData.cpp  ChunkData.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMeshData.cpp  ChunkMeshData.h  ChunkMeshDataBuilder.cpp  ChunkMeshDataBuilder.h  ChunkVertex.h  Constants.h  Utils.h
src/core/: Drawable.h  EventConsumer.h  Executor.cpp  Executor.h  INode.h  Node.cpp  Node.h  NodeHost.cpp  NodeHost.h  UpdateDelegate.h
src/gl/: GlResource.h  GlTypes.h  Shader.cpp  Shader.h  ShaderType.h  Texture.cpp  Texture.h  TextureDefinitions.h
src/include/: AssetManager.h  Block.h  Camera.h  CameraControls.h  Context.h  Game.h  NodeHost.h  Shader.h  SimpleCube.h  SimpleCubeScene.h  Texture.h  Transform.h  config.h.in  utils.h
src/include/asset/: AssetManager.h
src/include/camera/: CameraControls.h
src/include/core/: Drawable.h  EventConsumer.h  INode.h  Node.h  NodeHost.h
src/include/renderer/: Vertex.h
src/mesh/: ChunkMesh.cpp  ChunkMesh.h  RectMesh.cpp  RectMesh.h  SimpleMesh.cpp  SimpleMesh.h  SimpleVertex.h  SkyboxMesh.cpp  SkyboxMesh.h
src/registry/: BlockRegistry.cpp  BlockRegistry.h  TextureLookup.h  TextureManager.cpp  TextureManager.h
src/renderer/: BlocksRenderer.cpp  BlocksRenderer.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h  ChunkRenderer.cpp  ChunkRenderer.h  ChunkVertex.h  CompositeRenderer.cpp  CompositeRenderer.h  HUDRenderer.cpp  HUDRenderer.h  Perspective.h  Shader.cpp  Shader.h  SkyRenderer.cpp  SkyRenderer.h  SolidRenderer.cpp  SolidRenderer.h  Texture.cpp  Texture.h  TextureManager.h  Transform.h  Vertex.h  ViewFrustrum.cpp  ViewFrustrum.h  WorldRenderer.cpp  WorldRenderer.h
src/scene/: SimpleCubeScene.h  WorldScene.cpp  WorldScene.h
src/utils/: MathUtils.cpp  MathUtils.h  Utils.h
src/world/: Block.cpp  Block.h  BlockCache.cpp  BlockCache.h  Chunk.cpp  Chunk.h  ChunkCache.cpp  ChunkCache.h  World.cpp  World.h  WorldEventManager.h  WorldGenerator.cpp  WorldGenerator.h
